# qwen3-asr-serve

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  run.sh  status.sh  stop.sh
app/: __init__.py  aligner_patch.py  audio_io.py  config.py  lifespan.py  main.py  mapping.py  metrics.py  schemas.py
app/routes/: alignments.py  ops.py  transcriptions.py
scripts/: download_models.py  test_api.sh  verify.sh
